<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp"
    android:layout_marginBottom="4dp">
    
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageMV"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/ic_launcher"
        app:shapeAppearanceOverlay="@style/curved"
        android:layout_marginStart="5sp"/>

    <TextView
        android:id="@+id/songnameMV"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/song_name"
        android:layout_toEndOf="@+id/imageMV"
        android:layout_toStartOf="@+id/songduration"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:singleLine="true"/>
    <TextView
        android:id="@+id/songalbumMV"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/song_album"
        android:layout_toEndOf="@+id/imageMV"
        android:layout_toStartOf="@+id/songduration"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/songduration"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/start"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginHorizontal="5dp"/>

</RelativeLayout>