<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/shufflebtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/shuffle_btn"
                android:textColor="#AD19C6"
                android:text="@string/shuffle_btn"
                android:textStyle="bold"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="-2"
                android:shadowDy="-2"
                android:shadowRadius="1"/>
<!--            android:drawableTop="@drawable/shuffle_icon_1"-->

            <Button
                android:id="@+id/favouritebtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/favourites_btn"
                android:drawableTop="@drawable/favourite_icon"
                android:text="@string/favourites_btn"
                android:textColor="#A68623"
                android:textStyle="bold"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="-3"
                android:shadowDy="-3"
                android:shadowRadius="1"/>

            <Button
                android:id="@+id/playlistbtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/playlist_btn"
                android:drawableTop="@drawable/playlist_icon"
                android:text="@string/playlist_btn"
                android:textColor="#C60E4D"
                android:textStyle="bold"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="2"/>

        </LinearLayout>
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/musicRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>